# cirious_codex_cli

./: Cargo.toml  README.md
examples/: 01_basic_usage.rs  02_robust_microservice.rs
examples/resources/: config.json  microservice.json
src/: args.rs  lib.rs
tests/: cli_routing_tests.rs
