[package]
name = "cirious_codex_cli"
version = "0.1.0"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = ""
homepage = "https://github.com/cirious-studio/cirious_codex_cli"
repository = "https://github.com/cirious-studio/cirious_codex_cli"
documentation = "https://docs.rs/cirious_codex_cli"
exclude = [".github/", ".gitignore"]

[lints.rust]
missing_docs = "warn"

[dependencies]
cirious_codex_logger = "0.1.0"
cirious_codex_config = {version = "0.1.0", features = ["full"], optional = true}

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }


[features]
default = ["config"]
config = ["cirious_codex_config"]
config_json = []
config_toml = ["cirious_codex_config/toml"]
config_yaml = ["cirious_codex_config/yaml"]
config_full = ["cirious_codex_config/full"]
