[package]
name = "cirious_codex_cli"
version = "0.1.1"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Premier entrypoint library for building production-ready CLIs and microservices in the Cirious ecosystem, with automated argument parsing, logger bootstrapping, and configuration loading."
keywords = ["cli", "clap", "microservice", "config", "logging"]
categories = ["command-line-interface", "command-line-utilities", "config", "development-tools"]
homepage = "https://github.com/cirious-studio/cirious_codex_cli"
repository = "https://github.com/cirious-studio/cirious_codex_cli"
documentation = "https://docs.rs/cirious_codex_cli"
exclude = [".github/", ".gitignore"]

[lints.rust]
missing_docs = "warn"

[dependencies]
cirious_codex_logger = "0.1.0"
cirious_codex_config = { version = "0.1.0", optional = true, default-features = false }

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }


[features]
default = ["config"]
cli = []
config = ["cirious_codex_config"]
config_toml = ["cirious_codex_config/toml"]
config_yaml = ["cirious_codex_config/yaml"]
config_term = ["cirious_codex_config/term"]
config_logger = ["cirious_codex_config/logger"]

full = [
  "config",
  "config_toml",
  "config_yaml",
  "config_term",
  "config_logger"
]
